testdata/parser/negative/8.txt
Parse error at 8.pdl:11:1: Defined symbol clash: syncdrain
primitive syncdrain(in a, in b) {
^
